pstyle.css
@media only screen and (max-device-width: 480px){
    html, body{
        height: 91vh;
    }
}

@media only screen and (min-device-width: 481px){
    html, body{
        height: 100vh;
    }
}

html{
    background-color: rgb(24,24,24);
    scroll-behavior: smooth;
    font-size: 10px;
}

.wrapper{
    background-color: rgb(24,24,24);
    overflow-x: hidden;
    perspective: 10px;
    margin: 0;
}

body{
    font-family: "Source Code Pro";
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: 0;
}

.project{
    height: 50vh;
    width: 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transform-style: preserve-3d;
}

.icon{
    font-family: "Source Code Pro";
    height: min(22vh, 24rem);
    width: min(22vh, 24rem);
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: clamp(1rem, 5vmin, 2.5rem);
    margin-bottom: 1rem;
    margin-right: 0.5rem;
    text-decoration: none;
}

.top{
    color: white;
    height: 50%;
    width: min(100%, 450px);
    display: flex;
    flex-direction: row;
}

.topRight{
    border: 1px solid red;
    width: 42%;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-start;
    font-size: 1.75rem;
    margin-left: 1rem;
    margin-bottom: 1rem;
}

.topRight p{
    margin: 0;
}

hr{
    background-color: white;
    height: 1px;
    width: 100%;
    border: 0;
}

.links{
    font-size: 1.2rem;
}

.top a{
    color: white;
    text-decoration: none;
}

.top a:hover{
    filter: brightness(120%);
}

.repo img{
    filter: invert();
}

.bottom{
    height: 50%;
    width: min(100%, 700px);
}

.line{
    height: 50%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.line img, .repo img{
    height: 8rem;
}

/*------------------------HEADER------------------------*/

.header{
    height: 40vh;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-end;

    transform-style: preserve-3d;
    z-index: -1;
}

.header h1{
    color: white;
    position: absolute;
    margin-left: clamp(3rem, 5vmin, 5rem);
    margin-bottom: clamp(3rem, 5vmin, 5rem);
    font-size: clamp(3rem, 5vmin, 5rem);
}

#background{
    position: absolute;
    height: 120%;
    width: 100%;
    object-fit: cover;
    opacity: 0.8;

    z-index: -1;
    transform: translateZ(-10px) translateY(-260px) scale(2.2);
}

/*------------------------PROJECT ONE------------------------*/

#projectOne{
    background-color: rgb(24,24,24);
}

#wordleTitle{
    background-image: url("images/wordle.jpg");
    background-size: contain;
}

/*------------------------PROJECT TWO------------------------*/

#projectTwo{
    background-color: black;
}

#tictactoeTitle{
    background-image: url("images/tictactoe.jpg");
    background-size: contain;
}

/*------------------------PROJECT TWO------------------------*/

#projectThree{
    background-color: rgb(24,24,24);
}

#portfolioTitle{
    background-image: url("images/portfolio.jpg");
    background-size: contain;
}

/*------------------------FOOTER------------------------*/

.footer{
    background-color: rgb(24,24,24);
    color: white;
    text-align: center;
    transform-style: preserve-3d;
    margin: 0;
    padding: 1vh 0;
}

